@@ -29,6 +29,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   e - added ERS and IDS documentation 
   e - allow export of specific variables into prolog/epilog environment
   b - change fclose to pclose to close submit filter pipe (ABCC)
+  e - add support for Cray XT size and larger qstat task reporting (ORNL)
 
 2.1.8
   b - stop possible memory corruption with an invalid request type (StockholmU)
